k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ipl-cricket-service
  namespace: ipl-cricket
  labels:
    app: ipl-cricket
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 5000
    nodePort: 30080
    protocol: TCP
  selector:
    app: ipl-cricket
